--- a/main_nb.Rmd
+++ b/main_nb.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Breat Cancer Predictor"
 author: "Shivam Saini"
-output:
-  html_document:
-    df_print: paged
+output: html_document
+knit: (function(input_file, encoding) {  out_dir <- 'docs';
+  rmarkdown::render(input_file, encoding=encoding, output_file=file.path(dirname(input_file), out_dir,'index.html'))})
 ---
 
 ```{r}
